# RSS-Feed

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1743380488797-cd2cbd4e2ec3d.mjs
src/: App.tsx  main.tsx  tauri.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: README.txt  icon-info.txt
src-tauri/src/: main.rs
src/shims/tauri-api/: dialog.ts  fs.ts  shell.ts
src/store/: index.ts
src/types/: index.ts
