[package]
name = "rss-feed-reader"
version = "0.0.1"
description = "RSS Feed Reader Application"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"

[features]
# By default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` flag
# in debug mode
default = ["custom-protocol"]
# this feature is used for production builds where `devUrl` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols 
